# popcorn

./: README.md  main.py  pyproject.toml  style.qss
src/popcorn/: app.py
src/popcorn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/popcorn/core/: llm_moonshot.py  types.py
src/popcorn/ui/: main_window.py
src/popcorn/util/: qss.py
